# Coeffect-Sandbox

./: .gitattributes  .gitignore  .ocamlformat  Coeffect-Sandbox.opam  LICENSE  README.md  dune-project
dune.lock/: lock.dune
lib/: dune  extchannel.ml  interpreter.ml  lexer.ml  lexer.mli  parser.ml  token.ml
lib/implicit/: environments.ml  environments.mli  interpreter.ml  interpreter.mli  parser.ml  parser.mli  typecheck.ml  typecheck.mli  types.ml
lib/lambda/: interpreter.ml  interpreter.mli  parser.ml  parser.mli  types.ml
supplemental/implicit-parameters/: implicit-parameters.bnf
supplemental/implicit-parameters/samples/: sample.ip
supplemental/lambda-calculus/: lambda-calc.bnf
supplemental/lambda-calculus/samples/: sample.lc
supplemental/samples/: lex.lc
test/: dune  test_core.ml  test_implicit_context.ml  test_implicit_environment.ml  test_implicit_environments.ml  test_implicit_interpreter.ml  test_implicit_parser.ml  test_implicit_typecheck.ml  test_interpreter.ml  test_lambda_interpreter.ml  test_lambda_parser.ml  test_lexer.ml  test_main.ml  test_parser.ml
